# researchtoolsaisb

./: .gitattributes  .gitignore  README.md  app.py  config.json  dataset.py  live_logger.py  preprocess.py  pyproject.toml  requirements.txt  test.py  train_model.py  venv.sh
logs/: annotated_dataset.csv  dataset.csv  debug.txt  preprocessed_database.csv
models/: word2vec_model.model
models/finalfinalmodel/: config.json  trainer_state.json
models/finalmodel/: trainer_state.json
models/test model/: model_state.pt
models/test model 2/: model_state.pt
modules/: annotate.py  context_analysis.py  fetch_arxiv.py  fetch_ieee.py  process_pdf.py  summarize.py  topic_modeling.py  xploreapi.py
templates/: index.html  results.html
